[tool.poetry]
name = "midnite-api"
version = "0.1.0"
description = ""
authors = ["Atromight <asimitsidellis@gmail.com>"]
readme = "README.md"
packages = [{include = "midnite_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.4"
aiosqlite = "^0.21.0"
starlette = "^0.46.2"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.2.0"
pytest = "^8.3.5"
uvicorn = "^0.34.2"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
